# RPGSaveEditor

./: CLAUDE.md  README.md  analyze-actor-props.cjs  compare-saves.cjs  latest.json  package-lock.json  package.json  test-save-load.cjs
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html  latest.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AboutContent.tsx  ArmorsContent.tsx  ItemsContent.tsx  PartyContent.tsx  SwitchesContent.tsx  TranslateText.tsx  VariablesContent.tsx  WeaponsContent.tsx
src/context/: ContentContext.tsx  TranslationContext.tsx
src/hooks/: useActions.ts
src/types/: Armo.ts  Item.ts  RPGSave.ts  SaveData.ts  System.ts  Weapon.ts
src/utils/: fileUtils.ts  rpgsaveUtils.ts  rvdata2Utils.ts  saveDataUtils.ts  translateUtils.ts  vxAceCompat.ts
